# defend

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  MODULES.md  README.md  SECURITY.md  defend.config.yaml  pyproject.toml  pytest.ini  requirements.txt
.defend/: anomaly_centroid.npz
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_bug_report.md
.github/workflows/: ci.yml  release.yml
benchmarks/: results_20260317_092126.json  results_20260317_093009.json  results_20260317_105901.json
client/: __init__.py  client.py  exceptions.py  models.py
config/: patterns.yaml
defend/: __init__.py  cli.py  client.py  config_token.py  exceptions.py  init_token.py  middleware.py  models.py
defend/api/: __init__.py  config.py  main.py  schemas.py
defend/api/modules/: __init__.py  base.py
defend/api/providers/: __init__.py  (+1 more)
defend_api/: __init__.py  config.py  guard_session.py  logging.py  main.py  patterns.py  schemas.py  session.py
defend_api/models/: defend_qwen.py  intent.py  perplexity.py
defend_api/modules/: __init__.py  fragments.py
defend_api/pipeline/: anomaly_filter.py  anomaly_scorer.py  intent_fastpass.py  normalization.py  orchestrator.py  perplexity_filter.py  regex_heuristics.py  session_accumulator.py
defend_api/providers/: __init__.py  base.py  orchestrator.py
defend_api/routers/: classify.py  compat.py  guard.py  health.py  sessions.py
examples/: node_client.ts  python_client.py
models_cache/defend_qwen/: special_tokens_map.json  tokenizer_config.json
scripts/: benchmark.py
sdk/python/: README.md
sdk/typescript/: README.md  package.json  tsconfig.json
tests/: conftest.py  test_guard_and_modules.py  test_sessions.py
tests/api/: test_error_handling_api.py  test_guard_input_api.py  test_guard_output_api.py  test_health_api.py  test_security_behaviors_api.py
tests/e2e/: test_guard_e2e.py
tests/integration/: test_guard_and_modules_integration.py  test_guard_output_disabled.py  test_guard_output_provider_unavailable.py  test_guard_output_without_session.py  test_provider_selection_and_fallback.py  test_ready_endpoint.py  test_session_end_to_end.py  test_sessions_lifecycle.py
tests/perf/: test_guard_endpoints_perf_smoke.py
tests/unit/: test_client_library.py  test_config_loading.py  test_intent_fastpass.py  test_module_parsing.py  test_modules_config_and_prompts.py  test_normalization.py  test_providers_defend.py  test_providers_llm_adapters.py  test_regex_heuristics.py  test_session_accumulator.py  test_session_logic.py  test_sessions_unit.py
(+60 files in other folders)
