[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defend-api"
version = "0.1.0"
description = "AI security guardrails for LLM applications."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Defend maintainers" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["defend_api*", "client*"]

